--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "mysql": "^2.17.1",
     "mysql2": "^2.0.1",
     "mysql3": "^0.4.6",
+    "nodemailer": "^6.4.1",
     "objection": "^2.0.0",
+    "otplib": "^11.0.1",
     "uuid": "^3.3.3",
     "validator": "^12.1.0",
     "validator.js": "^2.0.3",
