ADD: JOB PORTAL

--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
 PORT=3000
 SALT_ROUNDS=10
-JWT_KEY='squarebboat'
+JWT_KEY=squarebboat
+JWT_PASS=asddd
+DB_PASS=12345678
+DIALECT=mysql
+DB_USER=root
+DB_NAME=jobportal
+DB_HOST=127.0.0.1
+OTP_SECRET=QWERTY
