.env.example edited online with Bitbucket

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,4 @@
-PORT=
-SALT_ROUNDS=
-JWT_KEY=
-JWT_PASS=
-DB_PASS=
-DIALECT=
-DB_USER=
-DB_NAME=
-DB_HOST=
-OTP_SECRET=
+SALT_ROUNDS=10
+JWT_KEY=squarebboat
+JWT_PASS=asddd
+OTP_SECRET=QWERTY
