ADD: env example

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,10 @@
+PORT=
 SALT_ROUNDS=10
 JWT_KEY=squarebboat
 JWT_PASS=asddd
+DB_PASS=
+DIALECT=
+DB_USER=
+DB_NAME=jobportal
+DB_HOST=
 OTP_SECRET=QWERTY
