--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.3",
     "morgan": "^1.9.1",
