FIX: env file updated mailtrap added

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,7 @@ DB_USER=
 DB_NAME=jobportal
 DB_HOST=
 OTP_SECRET=QWERTY
+MAILTRAP_HOST=smtp.mailtrap.io
+MAILTRAP_PORT=25
+MAILTRAP_AUTH_USER=be517c105d849c
+MAILTRAP_AUTH_PASS=59f9c090d72129
