FIX: ENV FILE CORRECTED ONLY KEY SEND

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,13 @@
 PORT=
-SALT_ROUNDS=10
-JWT_KEY=squarebboat
-JWT_PASS=asddd
-DB_PASS=
+JWT_KEY=
+JWT_PASS=
+DB_PASS
 DIALECT=
 DB_USER=
-DB_NAME=jobportal
+DB_NAME=
 DB_HOST=
-OTP_SECRET=QWERTY
-MAILTRAP_HOST=smtp.mailtrap.io
-MAILTRAP_PORT=25
-MAILTRAP_AUTH_USER=be517c105d849c
-MAILTRAP_AUTH_PASS=59f9c090d72129
+OTP_SECRET=
+MAILTRAP_HOST=
+MAILTRAP_PORT=
+MAILTRAP_AUTH_USER=
+MAILTRAP_AUTH_PASS=
